cabal-version:       >= 1.10
name:                vaultaire-common
version:             2.6.0
synopsis:            Common types and instances for Vaultaire
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Simple

source-repository    head
  type:              git
  location:          git@github.com:anchor/vaultaire-common.git


library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Vaultaire.Program,
                     Vaultaire.Types,
                     Vaultaire.Util

  other-modules:     Vaultaire.Classes.WireFormat,
                     Vaultaire.Types.Address,
                     Vaultaire.Types.ContentsOperation,
                     Vaultaire.Types.ContentsResponse,
                     Vaultaire.Types.SourceDict,
                     Vaultaire.Types.SourceDictCache,
                     Vaultaire.Types.ReadStream,
                     Vaultaire.Types.ReadRequest,
                     Vaultaire.Types.Common,
                     Vaultaire.Types.WriteResult,
                     Vaultaire.Types.ContentsListBypass,
                     Vaultaire.Types.DayMap,
                     Vaultaire.Types.TimeStamp,
                     Vaultaire.Types.PassThrough

  build-depends:     base >=3 && <5,
                     bytestring,
                     QuickCheck,
                     packer,
                     async,
                     transformers,
                     unix,
                     hslogger,
                     hashable,
                     containers,
                     unordered-containers,
                     blaze-builder,
                     attoparsec,
                     text,
                     time,
                     old-locale,
                     locators >= 0.2.4,
                     siphash,
                     cereal
  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           wire-formats-test
  hs-source-dirs:    tests
  main-is:           WireFormatsTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=4.7 && <5,
                     hspec,
                     containers,
                     unordered-containers,
                     text,
                     locators >= 0.2.4,
                     QuickCheck,
                     mtl,
                     bytestring,
                     vaultaire-common

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           instance-test
  hs-source-dirs:    tests
  main-is:           InstanceTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=4.7 && <5,
                     hspec,
                     vaultaire-common

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

-- vim: set tabstop=21 expandtab:
